tests/syntax_error/unnecessary_quote_escape_string.jou
def foo() -> void:
    x = "hello \'world"  # Error: single quotes shouldn't be escaped in strings
